--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<script async src="./js/bootstrap.js"></script>
 	<script async src="./js/blocs.js"></script>
 	<script async src="./js/jquery.touchSwipe.js" defer></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+	<script src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
 	<script async src="./js/gmaps.js"></script>
 
     <title>La Chouette agence - Accueil</title>
