commit jquery update

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script async src="./js/jquery-2.1.0.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
 	<script async src="./js/bootstrap.js"></script>
 	<script async src="./js/blocs.js"></script>
 	<script async src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-	<script src="https://code.jquery.com/jquery-migrate-1.4.1.js"></script>
+	
+	<script src="https://code.jquery.com/jquery-3.0.0.js"></script>
+	<script src="https://code.jquery.com/jquery-migrate-3.0.0.js"></script>
+
 	<script async src="./js/gmaps.js"></script>
 
     <title>La Chouette agence - Accueil</title>
@@ -38,9 +40,7 @@
 
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="Logo de la chouette agence, agence de web design à Lyon" height="40" /></a>
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
