--- a/index.html
+++ b/index.html
@@ -12,14 +12,10 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+	<script async src="./js/jquery-2.1.0.js"></script>
 	<script async src="./js/bootstrap.js"></script>
 	<script async src="./js/blocs.js"></script>
-	<script async src="./js/jquery.touchSwipe.js" defer></script>
-	
-	<script src="https://code.jquery.com/jquery-3.0.0.js"></script>
-	<script src="https://code.jquery.com/jquery-migrate-3.0.0.js"></script>
-
+	<script async src="./js/jquery.touchSwipe.js" ></script>
 	<script async src="./js/gmaps.js"></script>
 
     <title>La Chouette agence - Accueil</title>
